--- a/form.html
+++ b/form.html
@@ -15,7 +15,8 @@
     <a class="logo">
       <svg class="logo__image" width="186" height="98" xmlns="http://www.w3.org/2000/svg">
         <title>Логотип Седоны</title>
-        <path class="logo__image-border" d="M186 0H0l80.241 90.209c7.077 7.875 18.54 7.875 25.618 0L186 0Z" fill="#81B3D3" />
+        <path class="logo__image-border" d="M186 0H0l80.241 90.209c7.077 7.875 18.54 7.875 25.618 0L186 0Z"
+          fill="#81B3D3" />
         <path d="m43.061.698 49.44 58.212 49.142-57.814L43.061.698Z" fill="#23A9E1" />
         <path
           d="M121.608 17.244c-5.084 0-10.068.1-15.151.1 5.98-6.878 8.672-6.18 15.151-.1ZM80.54 22.627h26.614c-1.993-1.196-6.678-7.077-9.27-4.884-.2.2-7.476-8.872-12.26-4.486-4.187 3.788-6.08-.498-10.865 2.492-5.283 3.589 3.19 5.682 5.781 6.878Z"
@@ -78,9 +79,9 @@
   <main class="main">
     <h1 class="main__header">Форма отзыва</h1>
     <div class="banner">
-      <svg class="banner__text" width="230" height="40" xmlns="http://www.w3.org/2000/svg">
+      <svg class="banner__text" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 457 78">
         <path
-          d="M27.316 26.637c0 .25-.05.452-.05.653-.251 2.01-.903 3.97-1.955 5.78a11.456 11.456 0 0 1-4.26 4.221c-.652.302-1.354.553-2.055.804-.702.201-1.404.402-2.105.553-.602.1-1.153.201-1.755.252-.601.05-1.152.1-1.704.1h-.601a19.727 19.727 0 0 1-6.867-1.558C3.76 36.437 1.754 35.18 0 33.572l4.661-7.488.1.1.1.1a24.24 24.24 0 0 0 3.56 3.217c1.302.955 2.856 1.508 4.56 1.608.05 0 .1 0 .15.05.05 0 .1.051.15.051.051 0 .101 0 .151.05.05 0 .1.05.15.05.151 0 .301 0 .502-.05.15 0 .35-.05.501-.1.601-.1 1.203-.352 1.754-.704.552-.352 1.003-.754 1.303-1.306.05-.101.1-.151.1-.252.05-.1.1-.15.1-.251.101-.251.151-.503.151-.754.05-.251.05-.452.05-.653 0-1.056-.45-1.96-1.353-2.664a11.45 11.45 0 0 0-2.957-1.659c-.451-.15-.852-.301-1.203-.402-.4-.1-.752-.2-1.103-.25-.05 0-.1 0-.1-.051-.05 0-.1-.05-.1-.05a17.415 17.415 0 0 1-5.363-2.262C4.21 18.847 3.057 17.39 2.406 15.43l-.3-1.206c-.101-.452-.151-.854-.201-1.357-.05-.15-.05-.302-.05-.452v-.453c0-.301 0-.603.05-.955 0-.301.05-.603.15-.954.1-.754.3-1.558.601-2.312A8.31 8.31 0 0 1 3.71 5.629C4.962 3.569 6.566 2.11 8.52 1.206 10.375.452 12.43 0 14.535 0c.501 0 1.002.05 1.554.1.5.05 1.052.151 1.604.202 1.403.25 2.806.603 4.16 1.155a26.973 26.973 0 0 1 3.809 1.91l-3.208 7.187a28.007 28.007 0 0 0-3.308-2.06c-1.153-.604-2.406-.855-3.759-.855h-.501c-.902.1-1.704.503-2.506 1.206-.752.704-1.153 1.408-1.153 2.212 0 .1 0 .251.05.351 0 .101.05.252.15.352.1.252.2.503.401.754.2.252.401.453.652.654.451.351 1.053.653 1.854.954.802.302 1.654.553 2.557.855.751.2 1.453.402 2.155.553.701.15 1.303.351 1.754.502 2.155.754 3.81 2.06 4.912 3.87 1.102 1.81 1.654 3.72 1.704 5.73v.25c-.05.252-.05.503-.1.755Zm30.072 3.116v8.342H34.633V.905h22.755v8.141h-12.78v6.484h12.028v7.94H44.607v6.283h12.78Zm38.392-1.458c-1.203 2.563-2.907 4.674-5.162 6.282a16.313 16.313 0 0 1-5.915 2.564c-2.155.452-4.31.753-6.465.854-.602.05-1.253.05-1.855.05H64.456V.855h12.58c.602 0 1.203 0 1.754.05 2.105.1 4.16.402 6.215.854a14.634 14.634 0 0 1 5.614 2.563c2.155 1.508 3.859 3.518 5.062 6.031 1.203 2.513 1.904 5.076 2.055 7.69.05.25.05.452.05.703v1.508a21.36 21.36 0 0 1-2.005 8.041Zm-8.22-9.197c0-.15 0-.302-.05-.452a12.73 12.73 0 0 0-1.052-4.272c-.602-1.357-1.454-2.463-2.556-3.317A6.884 6.884 0 0 0 81.195 9.7c-1.002-.252-2.005-.352-3.057-.402h-3.759v20.505c.1 0 .25 0 .4.05.151 0 .251.05.402.05.15 0 .3 0 .4.05.1 0 .251.05.351.05.401 0 .802 0 1.203-.05.451 0 .852-.05 1.203-.1 1.003-.1 2.005-.251 2.957-.503.953-.25 1.855-.703 2.606-1.206 1.254-.904 2.156-2.11 2.757-3.668.602-1.558.902-3.167.902-4.825v-.553Zm54.932 1.96c0 .402-.05.804-.15 1.206-.1.804-.201 1.608-.451 2.413-.201.804-.501 1.608-.802 2.362-1.654 3.769-4.16 6.684-7.618 8.795-3.459 2.06-7.067 3.116-10.877 3.116-.25 0-.551 0-.801-.05-.251 0-.502-.05-.802-.05-1.304-.101-2.607-.353-3.91-.704a20.084 20.084 0 0 1-3.759-1.458c-3.258-1.709-5.814-4.171-7.668-7.338-1.855-3.166-2.807-6.483-2.807-9.9 0-.503 0-1.005.05-1.508.05-.503.1-1.055.251-1.558.2-1.005.451-2.01.802-3.066.351-1.005.751-2.01 1.303-2.965 1.804-3.317 4.26-5.83 7.468-7.589 3.157-1.759 6.515-2.613 9.974-2.613.451 0 .952 0 1.403.05.501.05.952.1 1.403.1a21.556 21.556 0 0 1 8.32 3.015c2.757 1.81 4.912 4.172 6.416 7.138 1.503 2.965 2.255 6.08 2.255 9.297v1.307Zm-10.124-2.11c0-.252-.05-.453-.05-.704a14.214 14.214 0 0 0-1.504-4.825 9.008 9.008 0 0 0-3.358-3.619 11.453 11.453 0 0 0-1.153-.502c-.401-.151-.751-.302-1.152-.402a9.23 9.23 0 0 0-1.153-.201c-.401-.05-.752-.1-1.153-.1-1.955 0-3.809.602-5.463 1.859a9.876 9.876 0 0 0-3.509 4.975c-.05.1-.05.15-.1.251 0 .1-.05.151-.05.252l-.301 1.055c-.1.352-.15.754-.25 1.156-.05.251-.05.553-.1.804 0 .252-.051.503-.051.804v.453c0 .15 0 .301.051.452.1 2.06.751 4.02 1.904 5.88 1.153 1.86 2.707 3.066 4.762 3.669.25.1.451.15.701.2l.752.152c.251.05.451.05.702.1.25 0 .451.05.701.05 2.055 0 3.91-.603 5.564-1.86 1.654-1.205 2.857-2.864 3.558-4.924l.301-1.206c.1-.453.15-.855.201-1.307.05-.252.05-.553.1-.804 0-.252.05-.503.05-.754v-.905Zm43.855 19.147-14.084-19.198c-.401-.452-.751-1.005-1.102-1.659-.351-.653-.702-1.306-1.003-2.01a19.608 19.608 0 0 1-.651-1.508 17.994 17.994 0 0 0-.602-1.357c.201 1.207.351 2.413.451 3.67a46.72 46.72 0 0 1 .151 3.718v18.344h-9.774V.905h9.774l13.983 19.098c.351.552.702 1.105 1.003 1.708.351.603.651 1.207.952 1.86.251.502.451 1.005.702 1.508.25.502.451 1.005.701 1.457-.05-.452-.1-.854-.15-1.206l-.15-1.206c-.1-.754-.151-1.558-.151-2.413-.05-.804-.05-1.658-.05-2.512V.954h9.724v37.19h-9.724v-.05Zm42.653 0-1.855-6.684h-14.334l-1.905 6.735h-10.024L203.489.955h12.63L229 38.145h-10.124v-.05Zm-7.769-26.184c-.2-.603-.401-1.206-.551-1.86-.151-.653-.301-1.256-.451-1.91-.101-.25-.151-.452-.151-.653-.05-.2-.1-.402-.1-.603l-.15.603c-.05.201-.101.453-.151.654-.05.1-.05.15-.05.2 0 .051 0 .152-.05.202-.1.603-.251 1.156-.401 1.709l-.451 1.658-3.759 12.313h10.074l-3.809-12.313Z" />
+          d="M54.5 53c0 .5-.1.9-.1 1.3-.5 4-1.8 7.9-3.9 11.5-2.1 3.6-5 6.4-8.5 8.4-1.3.6-2.7 1.1-4.1 1.6-1.4.4-2.8.8-4.2 1.1-1.2.2-2.3.4-3.5.5-1.2.1-2.3.2-3.4.2h-1.2c-4.6-.2-9.2-1.2-13.7-3.1-4.4-2-8.4-4.5-11.9-7.7l9.3-14.9.2.2.2.2c2.1 2.3 4.5 4.5 7.1 6.4 2.6 1.9 5.7 3 9.1 3.2.1 0 .2 0 .3.1.1 0 .2.1.3.1.1 0 .2 0 .3.1.1 0 .2.1.3.1.3 0 .6 0 1-.1.3 0 .7-.1 1-.2 1.2-.2 2.4-.7 3.5-1.4s2-1.5 2.6-2.6c.1-.2.2-.3.2-.5.1-.2.2-.3.2-.5.2-.5.3-1 .3-1.5.1-.5.1-.9.1-1.3 0-2.1-.9-3.9-2.7-5.3-1.8-1.4-3.8-2.5-5.9-3.3-.9-.3-1.7-.6-2.4-.8-.8-.2-1.5-.4-2.2-.5-.1 0-.2 0-.2-.1-.1 0-.2-.1-.2-.1-3.8-.9-7.4-2.4-10.7-4.5-3.3-2.1-5.6-5-6.9-8.9l-.6-2.4c-.2-.9-.3-1.7-.4-2.7-.1-.3-.1-.6-.1-.9v-.9c0-.6 0-1.2.1-1.9 0-.6.1-1.2.3-1.9.2-1.5.6-3.1 1.2-4.6.5-1.5 1.2-2.9 2.1-4.2 2.5-4.1 5.7-7 9.6-8.8C20.7.9 24.8 0 29 0c1 0 2 .1 3.1.2 1 .1 2.1.3 3.2.4 2.8.5 5.6 1.2 8.3 2.3 2.7 1.1 5.3 2.4 7.6 3.8L44.8 21c-2.1-1.5-4.3-2.9-6.6-4.1-2.3-1.2-4.8-1.7-7.5-1.7h-1c-1.8.2-3.4 1-5 2.4-1.5 1.4-2.3 2.8-2.3 4.4 0 .2 0 .5.1.7 0 .2.1.5.3.7.2.5.4 1 .8 1.5s.8.9 1.3 1.3c.9.7 2.1 1.3 3.7 1.9 1.6.6 3.3 1.1 5.1 1.7 1.5.4 2.9.8 4.3 1.1 1.4.3 2.6.7 3.5 1 4.3 1.5 7.6 4.1 9.8 7.7 2.2 3.6 3.3 7.4 3.4 11.4v.5c-.1.5-.1 1-.2 1.5Zm60 6.2v16.6H69.1v-74h45.4V18H89v12.9h24v15.8H89v12.5h25.5Zm76.6-2.9c-2.4 5.1-5.8 9.3-10.3 12.5-3.6 2.5-7.6 4.2-11.8 5.1-4.3.9-8.6 1.5-12.9 1.7-1.2.1-2.5.1-3.7.1h-23.8v-74h25.1c1.2 0 2.4 0 3.5.1 4.2.2 8.3.8 12.4 1.7 4.1.9 7.8 2.6 11.2 5.1 4.3 3 7.7 7 10.1 12 2.4 5 3.8 10.1 4.1 15.3.1.5.1.9.1 1.4v3c-.3 5.6-1.6 10.9-4 16ZM174.7 38c0-.3 0-.6-.1-.9-.2-2.9-.9-5.8-2.1-8.5-1.2-2.7-2.9-4.9-5.1-6.6-1.6-1.3-3.4-2.2-5.4-2.7-2-.5-4-.7-6.1-.8h-7.5v40.8c.2 0 .5 0 .8.1.3 0 .5.1.8.1.3 0 .6 0 .8.1.2 0 .5.1.7.1.8 0 1.6 0 2.4-.1.9 0 1.7-.1 2.4-.2 2-.2 4-.5 5.9-1 1.9-.5 3.7-1.4 5.2-2.4 2.5-1.8 4.3-4.2 5.5-7.3 1.2-3.1 1.8-6.3 1.8-9.6V38Zm109.6 3.9c0 .8-.1 1.6-.3 2.4-.2 1.6-.4 3.2-.9 4.8-.4 1.6-1 3.2-1.6 4.7-3.3 7.5-8.3 13.3-15.2 17.5-6.9 4.1-14.1 6.2-21.7 6.2-.5 0-1.1 0-1.6-.1-.5 0-1-.1-1.6-.1-2.6-.2-5.2-.7-7.8-1.4-2.6-.7-5.1-1.7-7.5-2.9-6.5-3.4-11.6-8.3-15.3-14.6-3.7-6.3-5.6-12.9-5.6-19.7 0-1 0-2 .1-3s.2-2.1.5-3.1c.4-2 .9-4 1.6-6.1.7-2 1.5-4 2.6-5.9 3.6-6.6 8.5-11.6 14.9-15.1 6.3-3.5 13-5.2 19.9-5.2.9 0 1.9 0 2.8.1 1 .1 1.9.2 2.8.2 2.9.4 5.7 1.1 8.5 2.1s5.5 2.3 8.1 3.9c5.5 3.6 9.8 8.3 12.8 14.2 3 5.9 4.5 12.1 4.5 18.5v2.6Zm-20.2-4.2c0-.5-.1-.9-.1-1.4-.4-3.3-1.4-6.5-3-9.6-1.6-3.1-3.9-5.5-6.7-7.2-.8-.4-1.5-.7-2.3-1-.8-.3-1.5-.6-2.3-.8-.8-.2-1.5-.3-2.3-.4-.8-.1-1.5-.2-2.3-.2-3.9 0-7.6 1.2-10.9 3.7-3.3 2.5-5.7 5.8-7 9.9-.1.2-.1.3-.2.5 0 .2-.1.3-.1.5l-.6 2.1c-.2.7-.3 1.5-.5 2.3-.1.5-.1 1.1-.2 1.6 0 .5-.1 1-.1 1.6v.9c0 .3 0 .6.1.9.2 4.1 1.5 8 3.8 11.7 2.3 3.7 5.4 6.1 9.5 7.3.5.2.9.3 1.4.4l1.5.3c.5.1.9.1 1.4.2.5 0 .9.1 1.4.1 4.1 0 7.8-1.2 11.1-3.7 3.3-2.4 5.7-5.7 7.1-9.8l.6-2.4c.2-.9.3-1.7.4-2.6.1-.5.1-1.1.2-1.6 0-.5.1-1 .1-1.5v-1.8Zm87.5 38.1-28.1-38.2c-.8-.9-1.5-2-2.2-3.3-.7-1.3-1.4-2.6-2-4-.5-1-.9-2-1.3-3s-.8-1.9-1.2-2.7c.4 2.4.7 4.8.9 7.3.2 2.5.3 5 .3 7.4v36.5h-19.5v-74H318l27.9 38c.7 1.1 1.4 2.2 2 3.4.7 1.2 1.3 2.4 1.9 3.7.5 1 .9 2 1.4 3 .5 1 .9 2 1.4 2.9-.1-.9-.2-1.7-.3-2.4L352 48c-.2-1.5-.3-3.1-.3-4.8-.1-1.6-.1-3.3-.1-5V1.9H371v74h-19.4v-.1Zm85.1 0L433 62.5h-28.6l-3.8 13.4h-20l25.4-74h25.2l25.7 74h-20.2v-.1Zm-15.5-52.1c-.4-1.2-.8-2.4-1.1-3.7-.3-1.3-.6-2.5-.9-3.8-.2-.5-.3-.9-.3-1.3-.1-.4-.2-.8-.2-1.2l-.3 1.2c-.1.4-.2.9-.3 1.3-.1.2-.1.3-.1.4 0 .1 0 .3-.1.4-.2 1.2-.5 2.3-.8 3.4l-.9 3.3-7.5 24.5h20.1l-7.6-24.5Z" />
       </svg>
       <svg class="banner__sepparator" width="1200" height="57" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -103,22 +104,22 @@
           <li class="form-list__item form-item">
             <label class="form-item__label form-label form-label--row">
               <span class="form-label__text form-label__text--row">Имя*:</span>
-              <input class="form-item__input input__text" type="text" inputmode="text" name="FirstName" placeholder="Введите имя"
-                minlength="4" maxlength="20" required />
+              <input class="form-item__input input__text" type="text" inputmode="text" name="FirstName"
+                placeholder="Введите имя" minlength="4" maxlength="20" required />
             </label>
           </li>
           <li class="form-list__item form-item">
             <label class="form-item__label form-label form-label--row">
               <span class="form-label__text form-label__text--row">Фамилия*:</span>
-              <input class="form-item__input input__text" type="text" inputmode="text" name="LastName" placeholder="Введите фамилию"
-                minlength="4" maxlength="30" required />
+              <input class="form-item__input input__text" type="text" inputmode="text" name="LastName"
+                placeholder="Введите фамилию" minlength="4" maxlength="30" required />
             </label>
           </li>
           <li class="form-list__item form-item">
             <label class="form-item__label form-label form-label--row">
               <span class="form-label__text form-label__text--row">Отчество:</span>
-              <input class="form-item__input input__text" type="text" inputmode="text" name="MiddleName" placeholder="Введите отчество"
-                minlength="4" maxlength="20" />
+              <input class="form-item__input input__text" type="text" inputmode="text" name="MiddleName"
+                placeholder="Введите отчество" minlength="4" maxlength="20" />
             </label>
           </li>
         </ul>
@@ -130,8 +131,8 @@
             <label class="form-item__label form-label form-label--column">
               <span class="form-label__text form-label__text--column">Контактный телефон*:</span>
               <div class="form-label__wrapper">
-                <input class="form-item__input input__text" type="tel" inputmode="tel" name="phone" placeholder="Введите телефон"
-                  pattern="[7,8]{1}[0-9]{10}" required />
+                <input class="form-item__input input__text" type="tel" inputmode="tel" name="phone"
+                  placeholder="Введите телефон" pattern="[7,8]{1}[0-9]{10}" required />
                 <div class="form-item__icon">
                   <svg class="form-item__image" width="18" height="18" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -145,8 +146,8 @@
             <label class="form-item__label form-label form-label--column">
               <span class="form-label__text form-label__text--column">Электронная почта*:</span>
               <div class="form-label__wrapper">
-                <input class="form-item__input input__text" type="email" inputmode="email" name="email" placeholder="Введите e-mail"
-                  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,6}$" required />
+                <input class="form-item__input input__text" type="email" inputmode="email" name="email"
+                  placeholder="Введите e-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,6}$" required />
                 <div class="form-item__icon">
                   <svg class="form-item__image" width="16" height="12" xmlns="http://www.w3.org/2000/svg">
                     <path
